--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="game">
             <p> Guess the number between <span class="min-num">1</span> and <span class="max-num">10</span></p>
             <input type="number" id="guess-input" placeholder="Enter your guess...">
-            <input type="submit" value="Submit" id="guess-btn">
+            <input type="submit" value="submit" id="guess-btn">
             <p class="message"></p>
         </div>
     </div>
